# chat2c

./: README.md
client/: README.md  package-lock.json  package.json
client/src/: App.vue  main.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: connection.rs  main.rs  message.rs
client/src-tauri/src/network/udp/: mod.rs  udp_client.rs  udp_server.rs
client/src-tauri/src/service/: connect.rs  file_service.rs  message_service.rs  mod.rs
server/: app.go
